--- a/includes/communal.pug
+++ b/includes/communal.pug
@@ -13,12 +13,12 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning Легкие-оплаты
+          span.badge.badge-warning Легкі-оплати
         ul
           li
             div.icon.portmone.com.ua
             a(href='https://www.portmone.com.ua/', target='_blank') portmone
-            span.opisi Платежная система
+            span.opisi Платіжна система
       .group
         .group-title
           span.badge.badge-success ГАЗ
@@ -42,10 +42,10 @@ block content
           li
             div.icon.a104.ua
             a(href='https://104.ua/ua/', target='_blank') 104.ua
-            span.opisi Поиск компании
+            span.opisi Пошук компанії
       .group
         .group-title
-          span.badge.badge-success Электроэнергия
+          span.badge.badge-success Електроенергія
         ul
           li
             div.icon.minfin.com.ua
@@ -86,40 +86,40 @@ block content
             span.opisi Цена.вода.Укр.
       .group
         .group-title
-          span.badge.badge-success Отопление
+          span.badge.badge-success Опалення
           
         ul
           li
             div.icon.maanimo.com
             a(href='https://maanimo.com/indexes/142540-tarify-na-otoplenie-v-ukraine-sezon-2017-2018', target='_blank') maanimo.com
-            span.opisi Цена.отопл.Укр.
+            span.opisi Цена.опал.Укр.
     .col-sm
       .group
         .group-title
-          span.badge.badge-success Интернет-кабельний
+          span.badge.badge-success Інтернет-кабельний
         ul
           li
             div.icon.ukrtelecom.ua
             a(href='https://ukrtelecom.ua/', target='_blank') ukrtelecom
-            span.opisi СЧЕТ/ТАРИФЫ
+            span.opisi РАХУНОК/ТАРИФИ
             a(href='https://youtu.be/WYhA_JFRVik', target='_blank')
               div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как узнать суму задолженности и ее оплатить', alt='')
           li
             div.icon.ukrtelecom.ua
             a(href='http://cc.ukrtele.com/', target='_blank') cc.ukrtele.com
-            span.opisi Если Вас заблокировали
+            span.opisi Якщо Вас заблокували
           li
             div.icon.my.ukrtelecom.ua
             a(href='http://www.my.ukrtelecom.ua/', target='_blank') my.ukrtelecom
-            span.opisi КАБИНЕТ
+            span.opisi КАБІНЕТ
           li
             div.icon.my.vega.ua
             a(href='https://my.vega.ua/', target='_blank') Vega Telecom
-            div.icontooinfo.a0repa3(title='Раздел-Комуналка. Vega Telecom - Національний телеком-оператор в Україні', alt='')
+            div.icontooinfo.a0repa3(title='Розділ-Комуналка. Vega Telecom - Національний телеком-оператор в Україні', alt='')
             a(href='https://youtu.be/4accV-xUU30', target='_blank')
-              div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Переход абонентов Укртелеком ОПТИКИ (FTTB) на ВЕГА Телеком', alt='')
+              div.icontooinfo.a0youtubeinform(title='Відеоінструкція. Перехід абонентів Укртелеком ОПТИКИ (FTTB) на ВЕГА Телеком', alt='')
             a(href='https://youtu.be/nsknyxq9alo', target='_blank')
-              div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как узнать суму задолженности и ее оплатить', alt='')
+              div.icontooinfo.a0youtubeinform(title='Відеоінструкція. Як дізнатися суму заборгованості та її сплатити', alt='')
           li
             div.icon.optonet.com.ua
             a(href='https://optonet.com.ua/', target='_blank') optonet.com.ua
@@ -134,7 +134,7 @@ block content
             span.opisi Sky-link
       .group
         .group-title
-          span.badge.badge-success Интернет-мобильный
+          span.badge.badge-success Інтернет-мобільний
           
         ul
           li
@@ -143,21 +143,21 @@ block content
           li
             div.icon.kyivstar.ua
             a(href='https://pay.kyivstar.ua/', target='_blank') pay.kyivstar.ua
-            span.opisi Пополнение
+            span.opisi Поповнення
           li
             div.icon.vodafone.ua
             a(href='https://www.vodafone.ua/ru', target='_blank') vodafone.ua
           li
             div.icon.vodafone.ua
             a(href='https://pay.vodafone.ua/', target='_blank') pay.vodafone.ua
-            span.opisi Пополнение
+            span.opisi Поповнення
           li
             div.icon.lifecell.ua
             a(href='https://www.lifecell.ua/', target='_blank') lifecell.ua
           li
             div.icon.lifecell.ua
             a(href='https://oplata.lifecell.ua/', target='_blank') oplata.lifecell.ua
-            span.opisi Пополнение
+            span.opisi Поповнення
           li
             div.icon.a3mob.ua
             a(href='http://3mob.ua/', target='_blank') 3mob.ua
@@ -167,34 +167,34 @@ block content
           li
             div.icon.intertelecom.ua
             a(href='http://www.intertelecom.ua/payments', target='_blank') intertelecom
-            span.opisi Пополнение
+            span.opisi Поповнення
           li
             div.icon.intertelecom.ua
             a(href='https://assa.intertelecom.ua/ru/login', target='_blank') assa.intertelecom
-            span.opisi Кабинет
+            span.opisi Кабінет
     .col-sm
       .group
         .group-title
-          span.badge.badge-success ИНФО от minfin.com.ua
+          span.badge.badge-success ІНФО от minfin.com.ua
           
         ul
           li
             div.icon.minfin.com.ua
-            a(href='https://index.minfin.com.ua/labour/salary/min/', target='_blank') Миним.зараб.плата
+            a(href='https://index.minfin.com.ua/labour/salary/min/', target='_blank') Мінім.зароб.плата
           li
             div.icon.minfin.com.ua
-            a(href='https://index.minfin.com.ua/labour/salary/average/', target='_blank') Средняя заработная плата
+            a(href='https://index.minfin.com.ua/labour/salary/average/', target='_blank') Середня заробітна плата
           li
             div.icon.minfin.com.ua
-            a(href='https://index.minfin.com.ua/labour/wagemin/', target='_blank') Прожит.миним.в.Украине
+            a(href='https://index.minfin.com.ua/labour/wagemin/', target='_blank') Прожити.мінімум.в.Україні
           li
             div.icon.minfin.com.ua
-            a(href='https://index.minfin.com.ua/economy/index/inflation/', target='_blank') Индекс инфляции
+            a(href='https://index.minfin.com.ua/economy/index/inflation/', target='_blank') Індекс інфляції
       .group
         .group-title
-          span.badge.badge-success ИНФО другое
+          span.badge.badge-success ІНФО інше
           
         ul
           li
             div.icon.buhoblik.org.ua
-            a(href='http://www.buhoblik.org.ua/kadry-zarplata/pensii/2827-2827-minimalnaya-pensiya.html', target='_blank') Миним.пенсия.в.Украине
+            a(href='http://www.buhoblik.org.ua/kadry-zarplata/pensii/2827-2827-minimalnaya-pensiya.html', target='_blank') Мінім.пенсія.в.Україні
