--- a/includes/games.pug
+++ b/includes/games.pug
@@ -13,7 +13,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success Азартные
+          span.badge.badge-success Азартні
         ul
           li
             div.icon.playset.ru
@@ -29,7 +29,7 @@ block content
             a(href='http://www.min2win.ru/', target='_blank') min2win.ru
       .group
         .group-title
-          span.badge.badge-success Логические
+          span.badge.badge-success Логічні
         ul
           li
             div.icon.zumagames.ru
@@ -56,7 +56,7 @@ block content
             span.opisi нужен TORRENT
       .group
         .group-title
-          span.badge.badge-success Инфо ТОП
+          span.badge.badge-success Інфо ТОП
         ul
           li
             div.icon.onlimegames.ru
@@ -102,11 +102,11 @@ block content
           li
             div.icon.silvergames
             a(href='https://www.silvergames.com/ru/', target='_blank') silvergames.com
-            div.icontooinfo.a0repa7(title='Играть В Классные Бесплатные Онлайн Игры На Silvergames.com', alt='')
+            div.icontooinfo.a0repa7(title='Грати в класні безкоштовні онлайн ігри на Silvergames.com', alt='')
     .col-sm
       .group
         .group-title
-          span.badge.badge-success Букмекерская контора - СНГ
+          span.badge.badge-success Букмекерська контора - СНД
         ul
           li
             div.icon.fan-sport.com.ua
@@ -125,7 +125,7 @@ block content
             a(href='https://www.favbet.com/', target='_blank') favbet.com
       .group
         .group-title
-          span.badge.badge-success Букмекерская контора - Европа
+          span.badge.badge-success Букмекерська контора - Європа
         ul
           li
             div.icon.pinnacle.com
