--- a/includes/media.pug
+++ b/includes/media.pug
@@ -13,7 +13,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning Плеер.ТОП.ЗАРУБЕЖНАЯ (playlist.2020.01)
+          span.badge.badge-warning Плеєр.ТОП.ЗАКОРДОН (playlist.2020.01)
         ul
           
           //- li
@@ -47,7 +47,7 @@ block content
             
       .group
         .group-title
-          span.badge.badge-success Ваше любимое видео!
+          span.badge.badge-success Ваше улюблене відео!
         ul
           li
             div.icon.youtube
@@ -70,7 +70,7 @@ block content
             a(href='http://usetv.pp.ua/tv/', target='_blank') usetv.pp.ua
       .group
         .group-title
-          span.badge.badge-success Кинотеатры
+          span.badge.badge-success Кінотеатри
         ul
           li
             div.icon.megogo.net
@@ -81,7 +81,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning Плеер.ТОП.УКРАИНСКАЯ (playlist.2020.01)
+          span.badge.badge-warning Плеєр.ТОП.УКРАЇНСЬКА (playlist.2020.01)
         ul
           
           //- li
@@ -109,7 +109,7 @@ block content
         
       .group
         .group-title
-          span.badge.badge-success Все о Кино
+          span.badge.badge-success Все про Кіно
         ul
           li
             div.icon.kinopoisk.ru
@@ -117,14 +117,14 @@ block content
             div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
         .group
           .group-title
-            span.badge.badge-success Сериалы онлайн
+            span.badge.badge-success Серіали онлайн
         ul
           li
             div.icon.seasonvar.ru
             a(href='http://seasonvar.ru/', target='_blank') seasonvar.ru
       .group
         .group-title
-          span.badge.badge-success Фильмы онлайн
+          span.badge.badge-success Фільми онлайн
         ul
           li
             div.icon.kinokrad.co
@@ -144,7 +144,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning Плеер.ТОП.РУССКАЯ (playlist.2020.01)
+          span.badge.badge-warning Плеєр.ТОП.РУСЬКА (playlist.2020.01)
         ul
           
           //- li
@@ -172,7 +172,7 @@ block content
 
       .group
         .group-title  
-          span.badge.badge-success Радио онлайн
+          span.badge.badge-success Радіо онлайн
         ul
           li
             div.icon.onlineradiobox.com
@@ -185,7 +185,7 @@ block content
             a(href='http://101.ru/', target='_blank') 101.ru
       .group
         .group-title
-          span.badge.badge-success Музыка онлайн
+          span.badge.badge-success Музика онлайн
         ul
           li
             div.icon.zaycev.fm
@@ -218,14 +218,14 @@ block content
             i.fainfo.fab.fa-telegram
       .group
         .group-title
-          span.badge.badge-success Музыка СКАЧАТЬ
+          span.badge.badge-success Музика ЗАВАНТАЖИТИ
         ul
           li
             div.icon.z1.fm
             a(href='https://z1.fm/', target='_blank') z1.fm
           li
             div.icon.nnmclub.to
-            a(href='http://nnmclub.to/forum/portal.php?c=25', target='_blank') nnm.Сборники
+            a(href='http://nnmclub.to/forum/portal.php?c=25', target='_blank') nnm.Збірки
             div.icontooinfo.a0_Group_m(title='Для скачивания нужна программа TORRENT', alt='')
           li
             div.icon.nnmclub.to
