--- a/includes/news.pug
+++ b/includes/news.pug
@@ -13,7 +13,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success Новости
+          span.badge.badge-success Новини
         ul
           li
             div.icon.ukr.net
@@ -80,7 +80,7 @@ block content
             a(href='https://telegraf.com.ua/', target='_blank') telegraf.com.ua
       .group
         .group-title
-          span.badge.badge-success Всякое
+          span.badge.badge-success Всяке
         ul
           li
             div.icon.sis.at.ua
@@ -91,7 +91,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success Новости спорта
+          span.badge.badge-success Новини спорту
         ul
           li
             div.icon.myscore.com.ua
@@ -113,14 +113,14 @@ block content
             a(href='https://isport.ua/', target='_blank') isport.ua
       .group
         .group-title
-          span.badge.badge-success Новости на Youtube
+          span.badge.badge-success Новини на Youtube
         ul
           li
             div.icon.youtube
             a(href='https://www.youtube.com/user/tsnukraine/videos', target='_blank') Youtube_ТСН
           li
             div.icon.youtube
-            a(href='https://www.youtube.com/user/sobytia/videos', target='_blank') Youtube_Сегодня
+            a(href='https://www.youtube.com/user/sobytia/videos', target='_blank') Youtube_Сьогодні
           li
             div.icon.youtube
             a(href='https://www.youtube.com/user/ViknaSTB/videos', target='_blank') Youtube_Вікна-новини
@@ -132,14 +132,14 @@ block content
             a(href='https://www.youtube.com/user/Arxivnn/videos', target='_blank') Youtube_Надзвичайні новини. ICTV
           li
             div.icon.youtube
-            a(href='https://www.youtube.com/user/podrobnosti/videos', target='_blank') Youtube_Подробности
+            a(href='https://www.youtube.com/user/podrobnosti/videos', target='_blank') Youtube_Подробиці
       .group
         .group-title
-          span.badge.badge-success online-Новости на Youtube
+          span.badge.badge-success online-Новини на Youtube
         ul
           li
             div.icon.youtube
-            a(href='https://www.youtube.com/channel/UCj4dH8kfRQFey9MYSENPNaQ', target='_blank') online_112 Украина
+            a(href='https://www.youtube.com/channel/UCj4dH8kfRQFey9MYSENPNaQ', target='_blank') online_112 Україна
           li
             div.icon.youtube
             a(href='https://www.youtube.com/channel/UCja992VI_u2e52c9FHQXw5A', target='_blank') online_24 Канал
@@ -157,14 +157,14 @@ block content
             a(href='https://www.youtube.com/user/5channel', target='_blank') online_5 канал
           li
             div.icon.youtube
-            a(href='https://www.youtube.com/user/SvobodaRadio/featured', target='_blank') online_Радио Свобода
+            a(href='https://www.youtube.com/user/SvobodaRadio/featured', target='_blank') online_Радіо Свобода
           li
             div.icon.youtube
-            a(href='https://www.youtube.com/user/euronewsru', target='_blank') online_euronews (на русском)
+            a(href='https://www.youtube.com/user/euronewsru', target='_blank') online_euronews (на русс)
     .col-sm
       .group
         .group-title
-          span.badge.badge-success Органы государственной власти Украины
+          span.badge.badge-success Органи державної влади України
         ul
           li
             div.icon.president.gov.ua
@@ -180,7 +180,7 @@ block content
             a(href='https://www.bank.gov.ua/', target='_blank') Національний банк України
       .group
         .group-title
-          span.badge.badge-success Другие органы и министерства
+          span.badge.badge-success Інші органи та міністерства
         ul
           li
             div.icon.minagro.gov.ua
