--- a/includes/_layout.pug
+++ b/includes/_layout.pug
@@ -25,7 +25,7 @@ html(lang="ru")
     meta(name='author', content='WebSIS & Company')
     block meta
       meta(name='keywords', content='лучшие сайты, популярные сайты, каталог сайтов, быстрые ссылки, cписок найпопулярніших веб-сайтів, zakladki, top, топ сайтів, speeddial, новости, соцсети, видео, погода')
-      meta(name='description', content='Полный список самых популярных сайтов интернета. Удобный каталог сайтов с сортировкой по тематике. Все топ сайты в одном месте. Все для удобства в интернете.')
+      meta(name='description', content='Повний перелік найпопулярніших веб-сайтів вебу. Зручний каталог сайтів із сортуванням за тематикою. Усі топ сайти в одному місці. Все для зручності в Інтернеті.')
     script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js', integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo', crossorigin='anonymous')
     // Player-top
     script(src='//zakladki.github.io/playerjs.js', type='text/javascript')
@@ -90,7 +90,7 @@ html(lang="ru")
                 i.far.fa-envelope.fa-lg(aria-hidden='true')
               a(href='https://t.me/zakladki_top_one', target='_blank', title='Telegram: КАНАЛ в ТЕЛЕГРАМ')
                 i.fab.fa-telegram.fa-lg(aria-hidden='true')
-              a(href='https://youtu.be/BdZQy6upWFc', target='_blank', title='Відеоінструкція: автозапуск ZAKLADOK')
+              a(href='https://youtu.be/BdZQy6upWFc', target='_blank', title='Відеоінструкція: автозапуск ЗАКЛАДОК')
                 i.fas.fa-medkit.fa-lg.coloriconfuter(aria-hidden='true')
                   
           .col-sm.footer-col
